--- a/index.html
+++ b/index.html
@@ -1,6 +1,32 @@
 <html>
 
+<head>
+
+
+
+  
+</head>
+
+
+
+
+
+
+  
 <body>
-<b>hello</b>
+<br>
+  <br>
+ <center> <h1>ABOUT THE OWNERS</h1></center>
+  <br>
+  <br>
+  <br>
+ <b><u>John Quill</u></b>
+  <br>
+  <img src = "headshot1.jpg>
+  
+
+
+
+
 </body>
 </html>
