--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <br>
   <br>
   <br>
- <b><u>John Quill</u></b>
+<font size = "12"> <b><u>John Quill</u></b></font>
   <br>
-  <img src = "headshot1.jpg">
+  <img src = "headshot1.jpg" width = 200 height = 200> 
   
 
 
