--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
 
   
 <body>
+  <body bgcolor = "#f0e4c9">
 <br>
   <br>
  <center> <h1>ABOUT THE OWNERS</h1></center>
   <br>
   <br>
   <br>
-<font size = "8"> <b><u>John Quill</u></b></font>
+<center><font size = "7"> <b><u>John Quill</u></b></font></center>
   <br>
   <img src = "headshot1.jpg" width = 250 height = 300> 
   
