--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body bgcolor = "#f0e4c9">
 <br>
   <br>
- <center> <h1>ABOUT THE OWNERS</h1></center>
+ <center><font size = "10"> <h1>ABOUT THE OWNERS</h1></font></center>
   <br>
   <br>
   <br>
