--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <br>
   <br>
   <br>
-<center><font size = "7"> <b><u>John Quill</u></b></font></center>
+<center><font size = "7" font color = "#543e0c"> <b>PUBLISHER - John Quill</b></font></center>
   <br>
   <img src = "headshot1.jpg" width = 250 height = 300> 
   
