--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <br>
   <br>
   <br>
-<center><font size = "7" font color = "#543e0c"> <b>PUBLISHER - John Quill</b></font></center>
-  <br>
-  <img src = "headshot1.jpg" width = 250 height = 300> 
+<center><font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
+    <br>
+  <img src = "headshot1.jpg" width = 250 height = 300> <font size = "5">For Years I have dreamed about writing my own mystery books the way that I believed they should be written.</font>
   
 
 
