--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <br>
 <center><font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
     <br>
-  <img src = "headshot1.jpg" width = 250 height = 300> <font size = "5">For Years I have dreamed about writing my own mystery books the way that I believed they should be written.</font>
+ <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
+    <br>
+    <font size = "5">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out . As a father of two delightful young children, my writing days are now long gone, but now as a publisher for<i>Logos</i>I can extend that dream to the next generation of aspiring writers.</font>
   
 
 
