--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body bgcolor = "#f0e4c9">
 <br>
   <br>
- <center><font size = "10"> <h1>ABOUT THE OWNERS</h1></font></center>
+ <center><font size = "10" font color = "#543e0c"> <h1>ABOUT THE OWNERS</h1></font></center>
   <br>
   <br>
   <br>
@@ -25,7 +25,7 @@
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
-    <font size = "5">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out . As a father of two delightful young children, my writing days are now long gone, but now as a publisher for<i>Logos</i>I can extend that dream to the next generation of aspiring writers.</font>
+    <font size = "5" font color = "9c8756">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out . As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font>
   
 
 
