--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <br>
   <br>
   <br>
-<center><font = "courier new" font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
+<center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
-    <center><font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     
   
 
