--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
-    For inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a>
+    <font size = "5" font color = "#9c8756">For inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font>
     <br>
     <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     
