--- a/index.html
+++ b/index.html
@@ -25,27 +25,33 @@
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For any publishing inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
+
+
+    
     <br>
     <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHEIF</u> - Gail Page</b></font></center>
     <br>
- <center> <img src = "headshot2.jpg" width = 250 height = 300> </center>
+ <center> <img src = "headshot2.jpg" width = 300 height = 300> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For proofreading inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
+
+
+    
   <br>
     <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>ART DIRECTOR</u> - Theodore Reed</b></font></center>
     <br>
- <center> <img src = "headshot3.jpg" width = 250 height = 300> </center>
+ <center> <img src = "headshot3.jpg" width = 300 height = 250> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For illustration inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "font-family:'Times New Roman" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
