--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <br>
     <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHEIF</u> - Gail Page</b></font></center>
     <br>
- <center> <img src = "headshot2.jpg" width = 300 height = 300> </center>
+ <center> <img src = "headshot2.jpg" width = 250 height = 400> </center>
     <br>
     <center><font size = "5" font color = "#9c8756">For proofreading inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
@@ -49,7 +49,7 @@
   <br>
     <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>ART DIRECTOR</u> - Theodore Reed</b></font></center>
     <br>
- <center> <img src = "headshot3.jpg" width = 300 height = 250> </center>
+ <center> <img src = "3headshot.jpg" width = 250 height = 300> </center>
     <br>
     <center><font size = "5" font color = "#9c8756">For illustration inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
