--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For any publishing inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For any publishing related inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
@@ -38,7 +38,7 @@
     <br>
  <center> <img src = "headshot2.jpg" width = 250 height = 350> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For proofreading inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For proofreading related inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "courier new" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
@@ -51,14 +51,37 @@
     <br>
  <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
     <br>
-    <center><font size = "5" font color = "#9c8756">For illustration inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
+    <center><font size = "5" font color = "#9c8756">For illustration related inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
+<br>
 
 
+ <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>SALES MANAGER</u> - Turner Swift</b></font></center>
+    <br>
+ <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
+    <br>
+    <center><font size = "5" font color = "#9c8756">For sales related inquiries, contact me <a href = "mailto:TurnerSwift@gmail.com" target = "_blank">here</a></font></center>
+    <br>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
 
+
+    <br>
+    <br>
+    <br>
+
+ <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>WORKSHOP AND TRAINING DIRECTOR</u> - Ross Caldwell</b></font></center>
+    <br>
+ <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
+    <br>
+    <center><font size = "5" font color = "#9c8756">For workshop and training related inquiries, contact me <a href = "mailto:RossCaldwell@gmail.com" target = "_blank">here</a></font></center>
+    <br>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <br>
+    <br>
+    <br>
 
 </body>
 </html>
