--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <br>
     <br>
 
- <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>WORKSHOP AND TRAINING DIRECTOR</u> - Ross Caldwell</b></font></center>
+ <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>WORKSHOP DIRECTOR</u> - Ross Caldwell</b></font></center>
     <br>
  <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
     <br>
