--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <br>
   <br>
   <br>
-<center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
+<center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>PUBLISHER</u> - John Quill</b></font></center>
     <br>
  <center> <img src = "headshot1.jpg" width = 250 height = 300> </center>
     <br>
@@ -34,7 +34,7 @@
 
     
     <br>
-    <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHEIF</u> - Gail Page</b></font></center>
+    <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHEIF</u> - Gail Page</b></font></center>
     <br>
  <center> <img src = "headshot2.jpg" width = 250 height = 350> </center>
     <br>
@@ -47,7 +47,7 @@
 
     
   <br>
-    <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>ART DIRECTOR</u> - Theodore Reed</b></font></center>
+    <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>ART DIRECTOR</u> - Theodore Reed</b></font></center>
     <br>
  <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
     <br>
@@ -59,7 +59,7 @@
 <br>
 
 
- <center><font style = "courier new" font size = "7" font color = "#543e0c"> <b><u>SALES MANAGER</u> - Turner Swift</b></font></center>
+ <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>SALES MANAGER</u> - Turner Swift</b></font></center>
     <br>
  <center> <img src = "3headshot.jpg" width = 250 height = 350> </center>
     <br>
