--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For proofreading related inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors.</font></center>
     <br>
     <br>
 
@@ -82,6 +82,6 @@
     <br>
     <br>
     <br>
-
+<font color = "red"><script> document.right(document.lastmodified);</script></font>
 </body>
 </html>
