--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
     <br>
     <br>
     <br>
-<left><font color = "red"><script> document.right(document.lastmodified);</script></font></left>
+<left><font color = "red"><script>document.write(document.lastModified);</script></font></left>
 </body>
 </html>
