--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <center><font size = "5" font color = "#9c8756">For proofreading related inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
     <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading: 
-      <br> <ol>
+      <br><center> <ol>
         <li>The Key Hider</li>
         <li>A Cold Spring</li>
         <li>Dont Ride That Elevator</li>
-      </ol>
-      Although some may think of me as the grammar police, I believe i am a very fun and outgoing person. I love <ul><li>my dog</li> <li>my amazing fiance</li> <li>and my family back home in Wyoming</li></ul> I love every part of my job because Editing is my true passion. </font></center>
-    <br>
+      </ol></center>
+      Although some may think of me as the grammar police, I believe i am a very fun and outgoing person. I love every part of my job because Editing is my true passion. </font></center>
+    <br> 
     <br>
 
 
