--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
     <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part of my job because Editing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
       <br> <ol style = "text-align: center; list-style-position: inside;">
         <li><i>The Key Hider</i> - A new and upcoming autobiography</li>
-        <li><i>A Cold Spring</i> - The greatest novel of all time</li>
-        <li><i>Dont Ride That Elevator</i> - A true metaphorical masterpiece</li>
+        <li><i>A Cold Spring</i> - The best novel in the world</li>
+        <li><i>Dont Ride That Elevator</i> - A metaphorical masterpiece</li>
       </ol></font>
       
     <br> 
