--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part of my job because Editing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
       <br> <ol style = "text-align: center; list-style-position: inside;">
         <li><i>The Key Hider</i> - A new and upcoming autobiography</li>
-        <li><i>A Cold Spring</i> - The best novel in the world</li>
+        <li><i>The Coldest Spring</i> - The best novel in the world</li>
         <li><i>Dont Ride That Elevator</i> - A metaphorical masterpiece</li>
       </ol></font>
       
@@ -60,7 +60,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For illustration related inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Turning what ideas others articulate with words into something visual that makes the story come to life is my favoite thing, and thats why painting is my passion. I have always been gifted with artistic skills since I was a kid and I have stuck with it. Now I am teaching my only child how to paint, hes not that great yet but he will keep trying. He wants to be just like his father. <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
 <br>
