--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For illustration related inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Turning what ideas others articulate with words into something visual that makes the story come to life is my favoite thing, and thats why painting is my passion. I have always been gifted with artistic skills since I was a kid and I have stuck with it. Now I am teaching my only child how to paint, hes not that great yet but he will keep trying. He wants to be just like his father. <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Turning what ideas others articulate with words into something visual that makes the story come to life is my favoite thing, and thats why painting is my passion. I have always been gifted with artistic skills since I was a kid and I have stuck with it. Now I am teaching my only child how to paint, hes not that great yet but he will keep trying. He wants to be just like his father.</font></center>
     <br>
     <br>
 <br>
