--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
 <body>
   <body bgcolor = "#f0e4c9">
-   <center> <img src = "Logos Logo.png" width = 350 height = 350></center>
+   <center> <img src = "Logos Logo New.png" width = 350 height = 350></center>
 <br>
   <br>
  <center><font size = "10" font color = "#543e0c"> <h1>ABOUT THE OWNERS</h1></font></center>
