--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For sales related inquiries, contact me <a href = "mailto:TurnerSwift@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I Have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">In my days as a university student back home in New Hampshire I was the biggest bookworm out of my whole class, the workers at all of the local libraries knew my name. I have enjoyed every second working here at <i>Logos</i>. It is such an amazing workspace and culture within the whole company, especially the sales department. I love that every day I go to work, I get to spend it extending the power of books to the next generation of writers.</font></center>
 
 
     <br>
