--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For any publishing related inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are now long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
 
@@ -84,7 +84,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For workshop and training related inquiries, contact me <a href = "mailto:RossCaldwell@gmail.com" target = "_blank">here</a></font></center>
     <br><center><font size = "5" font color = "#9c8756">Workshop sign up sheet <a href = "time slots.xlsx">here</a></font></center>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulusly creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if Im not at work, I am most likely to be doing one of these four things.
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulusly creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if Im not at work or playing with my dog, I am most likely to be doing one of these four things.
     <br><ul style = "text-align: center; list-style-position: inside;">
         <li>Traveling       </li>
         <li>Golfing         </li>
