--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For proofreading related inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part of my job because Editing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
+    <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part <i>Logos</i> because reading and writing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
       <br> <ol style = "text-align: center; list-style-position: inside;">
         <li><i>The Key Hider</i> - A new and upcoming autobiography</li>
         <li><i>The Coldest Spring</i> - It is the best novel ever created</li>
@@ -59,7 +59,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For illustration related inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Turning what ideas others articulate with words into something visual that makes the story come to life is my favoite thing, and thats why painting is my passion. I have always been gifted with artistic skills since I was a kid and I have stuck with it. Now I am teaching my only child how to paint, hes not that great yet but he will keep trying. He wants to be just like his father.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Evolving what ideas others articulate with words into something visual that can make the story come to life is my favoite thing, and thats why painting is my favorite pastime. I have always been gifted with artistic skills since I was a kid and I have most definitely stuck with it. Currently I am teaching my todler how to paint, hes not that great yet but he will keep trying. He wants to be just like his father.</font></center>
     <br>
     <br>
 <br>
@@ -71,7 +71,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For sales related inquiries, contact me <a href = "mailto:TurnerSwift@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">In my days as a university student back home in New Hampshire I was the biggest bookworm out of my whole class, the workers at all of the local libraries knew my name. I have enjoyed every second working here at <i>Logos</i>. It is such an amazing workspace and culture within the whole company, especially the sales department. I love that every day I go to work, I get to spend it extending the power of books to the next generation of writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">In my days as a university student back home in New Hampshire I was the biggest bookworm out of my whole class, the workers at all of the local libraries knew me by name. I have enjoyed every second working here at <i>Logos</i>. It is such an amazing workspace and culture within the whole company, especially the sales department. I love that every day I go to work, I get to spend it extending the power of literature to the next generation of writers.</font></center>
 
 
     <br>
@@ -86,8 +86,8 @@
     <br><center><font size = "5" font color = "#9c8756">Workshop sign up sheet <a href = "time slots.xlsx">here</a></font></center>
     <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulusly creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if Im not at work or playing with my dog, I am most likely to be doing one of these four things.
     <br><ul style = "text-align: center; list-style-position: inside;">
-        <li>Traveling       </li>
-        <li>Golfing         </li>
+        <li>Traveling<font color = "#f0e4c9">-------</font></li>
+        <li>Golfing<font color = "#f0e4c9">---------</font></li>
         <li>Deep sea fishing</li>
         <li>Ultimate frisbee</li>
       </ol></font></center>
