--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part <i>Logos</i> because reading and writing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
       <br> <ol style = "text-align: center; list-style-position: inside;">
         <li><i>The Key Hider</i> - A new and upcoming autobiography<font color = "#f0e4c9">-i</font></li>
-        <li><i>The Coldest Spring</i> - It is the best novel ever created<font color = "#f0e4c9">-i</font></li>
+        <li><i>The Coldest Spring</i> - It is the best novel ever created<font color = "#f0e4c9">-_</font></li>
         <li><i>Dont Ride That Elevator</i> - A metaphorical masterpiece</li>
       </ol></font>
       
