--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@
     <br><center><font size = "5" font color = "#9c8756">Workshop sign up sheet <a href = "time slots.xlsx">here</a></font></center>
     <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulusly creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if Im not at work or playing with my dog, I am most likely to be doing one of these four things.
     <br><ul style = "text-align: center; list-style-position: inside;">
-        <li>Traveling<font color = "#f0e4c9">--------</font></li>
-        <li>Golfing<font color = "#f0e4c9">----------</font></li>
+        <li>Traveling<font color = "#f0e4c9">--------.</font></li>
+        <li>Golfing<font color = "#f0e4c9">----------.</font></li>
         <li>Deep sea fishing</li>
-        <li>Ultimate frisbee</li>
+        <li>Ultimate frisbee<font color = "#f0e4c9">.</font></li>
       </ol></font></center>
     <br>
     <br>
