--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     
     <br>
-    <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHEIF</u> - Gail Page</b></font></center>
+    <center><font style = "font-family: 'courier new'" font size = "7" font color = "#543e0c"> <b><u>EDITOR-IN-CHIEF</u> - Gail Page</b></font></center>
     <br>
  <center> <img src = "headshot2.jpg" width = 250 height = 350> </center>
     <br>
