--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For any publishing related inquiries, contact me <a href = "mailto:JohnQuill@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">For Years I have dreamt about writing my own mystery books the way that I believed they should be written, I have published a couple of great books like <i>The Key?</i> and <i>Where Is It?</i> they are phenomenal reads, and I encourage you to check them out. You can find them at this <a href = "https://wlaf.lib.in.us/" target = "_blank">library</a> in West Lafayette. As a father of two delightful young children, my writing days are long gone, but now as a publisher for <i>Logos</i> I can extend that dream to the next generation of aspiring writers.</font></center>
     <br>
     <br>
 
@@ -40,11 +40,11 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For proofreading related inquiries, contact me <a href = "mailto:GailPage@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part <i>Logos</i> because reading and writing is my true passion. Here is a list in order of my favotite books that I have gotten the pleasure of proofreading:</center>
+    <font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c"><center>As the editor-in-chief and the newest member of the management team, I am overjoyed to be able to work at <i>Logos</i> and proofread for the next generation of authors. Although some may think of me as the grammar police, I believe I am a very fun and outgoing person. I love every part <i>Logos</i> because reading and writing is my true passion. Here is a list in order of my favorite books that I have gotten the pleasure of proofreading:</center>
       <br> <ol style = "text-align: center; list-style-position: inside;">
-        <li><i>The Key Hider</i> - A new and upcoming autobiography<font color = "#f0e4c9">-i</font></li>
-        <li><i>The Coldest Spring</i> - It is the best novel ever created<font color = "#f0e4c9">-_</font></li>
-        <li><i>Dont Ride That Elevator</i> - A metaphorical masterpiece</li>
+        <li><i>The Key Hider</i> - A new and upcoming autobiography<font color = "#f0e4c9">-i'</font></li>
+        <li><i>The Coldest Spring</i> - It is the best novel ever created<font color = "#f0e4c9">-_'</font></li>
+        <li><i>Don't Ride That Elevator</i> - A metaphorical masterpiece</li>
       </ol></font>
       
     <br> 
@@ -59,7 +59,7 @@
     <br>
     <center><font size = "5" font color = "#9c8756">For illustration related inquiries, contact me <a href = "mailto:TheodoreReed@gmail.com" target = "_blank">here</a></font></center>
     <br>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Evolving what ideas others articulate with words into something visual that can make the story come to life is my favoite thing, and thats why painting is my favorite pastime. I have always been gifted with artistic skills since I was a kid and I have most definitely stuck with it. Currently I am teaching my todler how to paint, hes not that great yet but he will keep trying. He wants to be just like his father.</font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Evolving what ideas others articulate with words into something visual that can make the story come to life is my favorite thing, and that's why painting is my favorite pastime. I have always been gifted with artistic skills since I was a kid, and I have most definitely stuck with it. Currently I am teaching my toddler how to paint, he's not that great yet but he will keep trying. He wants to be just like his father.</font></center>
     <br>
     <br>
 <br>
@@ -83,8 +83,8 @@
  <center> <img src = "headshot5.jpg" width = 250 height = 250> </center>
     <br>
     <center><font size = "5" font color = "#9c8756">For workshop and training related inquiries, contact me <a href = "mailto:RossCaldwell@gmail.com" target = "_blank">here</a></font></center>
-    <br><center><font size = "5" font color = "#9c8756">Workshop sign up sheet <a href = "time slots.xlsx">here</a></font></center>
-    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulusly creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if Im not at work or playing with my dog, I am most likely to be doing one of these four things.
+    <br><center><font size = "5" font color = "#9c8756">Workshop sign-up sheet <a href = "time slots.xlsx">here</a></font></center>
+    <center><font style = "font-family:'Times New Roman'" font size = "5" font color = "#543e0c">Working at <i>logos</i> is the best thing to happen to me because meticulously creating writing pieces is my guilty pleasure. However, I am a man of many hobbies outside of my work, I enjoy being outdoors playing with my dog on a nice warm evening and Chances are, if I'm not at work or playing with my dog, I am most likely to be doing one of these four things.
     <br><ul style = "text-align: center; list-style-position: inside;">
         <li>Traveling<font color = "#f0e4c9">--------.</font></li>
         <li>Golfing<font color = "#f0e4c9">----------.</font></li>
